Move backend files to src

--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -1597,7 +1597,7 @@
    "outputs": [],
    "source": [
     "import pathlib\n",
-    "folder_name = 'pdf_plot_results/' \n",
+    "folder_name = 'output/pdf_plot_results/' \n",
     "pathlib.Path(folder_name).mkdir(parents=True, exist_ok=True)"
    ]
   },
