--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "3\n"
      ]
     }
    ],
@@ -94,7 +94,9 @@
     "filenames = ['log_mcd_mt_current_date_pred_entropy.pkl']\n",
     "filenames = ['log_evidential_wdice_mt.pkl']\n",
     "\n",
+    "filenames = ['log_mcd_mt_current_date_single_run.pkl']\n",
     "\n",
+    "filenames = ['log_single_run.pkl']\n",
     "\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,25 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.3670126015642983,\n",
-       " 0.0,\n",
-       " 0.4184570618416211,\n",
-       " 0.3254891061701938,\n",
-       " 0.3265588479958401,\n",
-       " 0.2742005585078956,\n",
-       " 0.4426829877139664,\n",
-       " 0.5162214605056792,\n",
-       " 0.43012130625754635,\n",
-       " 0.5404739587669327]"
+       "[0.841080483916035, 0.8141570958729208, 0.8569092307938756]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -155,16 +148,9 @@
      "output_type": "stream",
      "text": [
       "    sUEO  ECE (10 bins)    F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0  0.367          0.049  67.0    88.5      NaN      93.0  0.234\n",
-      "1  0.000          0.019   0.0     NaN      NaN      98.3  0.540\n",
-      "2  0.418          0.054  82.1    96.1     15.0      97.1  0.159\n",
-      "3  0.325          0.079  66.3    92.2     15.6      96.0  0.264\n",
-      "4  0.327          0.047  70.6    88.0      NaN      92.0  0.188\n",
-      "5  0.274          0.067  69.8    88.7      NaN      92.7  0.197\n",
-      "6  0.443          0.069  82.0    92.7     33.8      94.5  0.139\n",
-      "7  0.516          0.033  67.7    78.5     27.3      84.6  0.168\n",
-      "8  0.430          0.087  75.8    91.8     43.3      95.1  0.199\n",
-      "9  0.540          0.036  69.7    93.4     28.0      96.4  0.269\n"
+      "0  0.841          0.004  84.5    96.3     70.2      98.0  0.116\n",
+      "1  0.814          0.005  82.0    95.1     60.1      96.9  0.134\n",
+      "2  0.857          0.004  86.0    96.9     71.6      98.2  0.108\n"
      ]
     }
    ],
@@ -184,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
