Refactor train_evidential.ipynb

--- a/train_evidential.ipynb
+++ b/train_evidential.ipynb
@@ -65,12 +65,10 @@
     "import numpy as np\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    PA, PADeforestationTime, PADistanceMap, PAMultipleDates,\n",
-    "    MTDeforestationTime,\n",
+    "    PA, PADistanceMap, PAMultipleDates,\n",
     "    MTMultipleDates\n",
     ")\n",
     "\n",
-    "# from src.dataset_legacy import MTDeforestationTime\n",
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
     "\n",
@@ -81,7 +79,7 @@
     "\n",
     "import cv2\n",
     "from src import metrics as _metric\n",
-    "from src.backend.Logger import Logger\n"
+    "from src.Logger import Logger\n"
    ]
   },
   {
@@ -562,13 +560,9 @@
    "outputs": [],
    "source": [
     "if config[\"training\"] == True:\n",
-    "    if type(dataset) != PADeforestationTime and type(dataset) != MTDeforestationTime:\n",
-    "        trainer.logger.plotFigure(trainer.label_mask[...,-1], \n",
-    "            name='Reference', cmap=plt.cm.gray, savefig=False)\n",
     "\n",
-    "    else:\n",
-    "        trainer.logger.plotFigure(trainer.label_mask[...,-1], \n",
-    "            name='Reference', cmap=plt.cm.gray, savefig=False)\n",
+    "    trainer.logger.plotFigure(trainer.label_mask[...,-1], \n",
+    "        name='Reference', cmap=plt.cm.gray, savefig=False)\n",
     "\n"
    ]
   },
@@ -904,8 +898,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if type(trainer.dataset) != PADeforestationTime and type(trainer.dataset) != MTDeforestationTime:\n",
-    "    trainer.patchesHandler.dataset.image_channels[-1]"
+    "trainer.patchesHandler.dataset.image_channels[-1]"
    ]
   },
   {
