Refactor train_evidential.ipynb 2

--- a/train_evidential.ipynb
+++ b/train_evidential.ipynb
@@ -2326,8 +2326,8 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "trainer.getPOIValues()\n"
+    "if config['dataset'] == 'PA':\n",
+    "    trainer.getPOIValues()\n"
    ]
   },
   {
