Add New exp format

--- a/train_evidential.ipynb
+++ b/train_evidential.ipynb
@@ -84,18 +84,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c877b0b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from enum import Enum\n",
-    "UncertaintyMethod = Enum('Predictor', 'pred_var MI pred_entropy KL pred_entropy_single evidential')\n",
-    "uncertaintyMethod = \"evidential\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "603a5df7",
    "metadata": {},
@@ -125,7 +113,7 @@
     "\t\"Uncertainty\": {\n",
     "\t\t\"annealing_step\": 10*375 # 1875, 10*375*10\n",
     "\t},\n",
-    "\t\"uncertainty_method\": uncertaintyMethod,\n",
+    "\t\"uncertainty_method\": \"evidential\",\n",
     "\t\"evidence_function\": evidential.relu_evidence,\n",
     "\t\"site\": \"PA\",\n",
     "\t\"training_date\": \"earlier\" # values: earlier, current\n",
@@ -142,7 +130,6 @@
     "else:\n",
     "\tdates = [2019, 2020]\n",
     "'''\n",
-    "config['site'] = 'PA'\n",
     "if config['site'] == 'PA':\n",
     "\tif config['training'] == True and config['training_date'] == 'earlier':\n",
     "\t\tdates = [2017, 2018]\n",
@@ -170,6 +157,25 @@
     "\t\tdataset)\n",
     "else:\n",
     "\tpatchesHandler = PatchesHandler()\n",
+    "\n",
+    "\n",
+    "if config['training'] == False:\n",
+    "\n",
+    "\tif type(dataset) == PAMultipleDates:\n",
+    "\n",
+    "\n",
+    "\t\tif config['training_date'] == 'current': exp = 4; repetition_id = 0\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 6; repetition_id = 0\n",
+    "\t\t \n",
+    "\tif type(dataset) == MTMultipleDates:\n",
+    "\t\t\n",
+    "\t\tif config['training_date'] == 'current': exp = 7; repetition_id = 0\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 8; repetition_id = 0\t\t\n",
+    "\n",
+    "\t\t\n",
+    "else:\n",
+    "\n",
+    "\texp = 10\n",
     "\n",
     "# exp = 170\n",
     "# exp = 155\n",
@@ -2419,6 +2425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "from src import metrics as _metrics\n",
     "def getUncertaintyAAValues(self):\n",
     "\n",
@@ -2493,7 +2500,8 @@
     "            'UEO': metrics_values[:,6]}\n",
     "\n",
     "    self.m['f1_L'] = 2*self.m['precision_L']*self.m['recall_L']/(self.m['precision_L']+self.m['recall_L'])\n",
-    "    self.m['f1_H'] = 2*self.m['precision_H']*self.m['recall_H']/(self.m['precision_H']+self.m['recall_H'])"
+    "    self.m['f1_H'] = 2*self.m['precision_H']*self.m['recall_H']/(self.m['precision_H']+self.m['recall_H'])\n",
+    "'''"
    ]
   },
   {
@@ -2503,10 +2511,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "'''\n",
     "import types\n",
     "\n",
-    "trainer.getUncertaintyAAValues = types.MethodType(getUncertaintyAAValues, trainer)\n"
+    "trainer.getUncertaintyAAValues = types.MethodType(getUncertaintyAAValues, trainer)\n",
+    "'''\n"
    ]
   },
   {
