--- a/train_grid_execution.ipynb
+++ b/train_grid_execution.ipynb
@@ -69,6 +69,7 @@
     "    \"site\" : 'PA',\n",
     "    \"training_date\": \"current\", # values: earlier, current\n",
     "    \"mode\" : 'single_run', # values: mcd, single_run, ensemble, evidential\n",
+    "    \"training_times\": 10,\n",
     "    \"learning_rate\": 1e-4,\n",
     "    \"weights\": [0.1, 0.9, 0],\n",
     "    \"save_probabilities\": False,\n",
@@ -122,9 +123,10 @@
     "\t\telse:\n",
     "\t\t\tsys.exit(\"Ensure that training is True for ensemble mode. Use infer_ensemble.ipynb for inference.\")\n",
     "\n",
-    "\tif config['mode'] == 'mcd' or config['mode'] == 'single_run':\n",
+    "\tif config['mode'] == 'mcd' or config['mode'] == 'single_run': # MCD will do 10 inference on each of the 10 repetitions = 100 runs\n",
     "\t\tif config['training_date'] == 'current':\n",
-    "\t\t\texp_ids = [103, 104, 105, 106, 107, 118, 119, 120, 121, 122]\n",
+    "\t\t\t# exp_ids = [103, 104, 105, 106, 107, 118, 119, 120, 121, 122]\n",
+    "\t\t\texp = 0\n",
     "\t\telif config['training_date'] == 'earlier':\n",
     "\t\t\texp_ids = [123, 124, 125, 126, 127, 128, 129, 131, 1122, 1121]\n",
     "\tif config['mode'] == 'evidential':\t\n",
@@ -255,17 +257,17 @@
     "if config['training'] == True:\n",
     "    idx = 0\n",
     "    error_count = 0\n",
-    "\n",
-    "    while idx < len(exp_ids):\n",
-    "    # for experiment_value, exp_id in zip(experiment_values, exp_ids):\n",
+    "    \n",
+    "    while idx < config[\"training_times\"]:\n",
     "        try:\n",
     "\n",
     "            print(\"Beginning run number {}\".format(idx))\n",
     "            logger = Logger()\n",
     "            trainer = trainer_class(config, dataset, patchesHandler, logger)\n",
     "            print(\"trainer.config['dropout_training']\", trainer.config['dropout_training'])\n",
-    "            trainer.defineExperiment(exp_ids[idx])\n",
-    "\n",
+    "            trainer.defineExperiment(exp) # fixed\n",
+    "            trainer.defineRepetitionId(idx) # varying from 0 to 10\n",
+    "            \n",
     "            trainer.setExperimentPath()\n",
     "            trainer.createLogFolders()\n",
     "\n",
@@ -2604,8 +2606,8 @@
     "            trainer = trainer_class(config, dataset, patchesHandler, logger)\n",
     "            print(\"trainer.config\", trainer.config)\n",
     "\n",
-    "            trainer.defineExperiment(exp_ids[idx])\n",
-    "\n",
+    "            trainer.defineExperiment(exp) # fixed\n",
+    "            trainer.defineRepetitionId(idx) # varying from 0 to 10\n",
     "            trainer.setExperimentPath()\n",
     "            trainer.createLogFolders()\n",
     "\n",
