Train grid execution refactor for new exp format

--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -37,7 +37,8 @@
     "import cv2\n",
     "from src import metrics as _metric\n",
     "from src.trainer.evidential import getMassFcn2D\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sys"
    ]
   },
   {
@@ -205,6 +206,15 @@
    ],
    "source": [
     "df['UEO'].squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.exit()"
    ]
   },
   {
