--- a/train_grid_execution.ipynb
+++ b/train_grid_execution.ipynb
@@ -124,18 +124,21 @@
     "\t\t\tsys.exit(\"Ensure that training is True for ensemble mode. Use infer_ensemble.ipynb for inference.\")\n",
     "\n",
     "\tif config['mode'] == 'mcd' or config['mode'] == 'single_run': # MCD will do 10 inference on each of the 10 repetitions = 100 runs\n",
-    "\t\tif config['training_date'] == 'current':\n",
+    "\t\tif config['training_date'] == 'current': exp = 0\n",
     "\t\t\t# exp_ids = [103, 104, 105, 106, 107, 118, 119, 120, 121, 122]\n",
-    "\t\t\texp = 0\n",
-    "\t\telif config['training_date'] == 'earlier':\n",
-    "\t\t\texp_ids = [123, 124, 125, 126, 127, 128, 129, 131, 1122, 1121]\n",
+    "\t\t\t\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 1\n",
+    "\t\t\t# exp_ids = [123, 124, 125, 126, 127, 128, 129, 131, 1122, 1121]\n",
+    "\t\t\t\n",
     "\tif config['mode'] == 'evidential':\t\n",
     "\t\t#exp_id_base = 148\n",
     "\t\t# exp_id_base = 155\n",
     "\t\t# exp_id_base = 194\n",
     "\t\t# exp_id_base = 198\n",
-    "\n",
-    "\t\texp_id_base = 224 if config['training_date'] == 'earlier' else 214\n",
+    "\t\t\n",
+    "\t\tif config['training_date'] == 'current': exp = 4; repetition_id = 0\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 6; repetition_id = 0\n",
+    "\t\t# exp_id_base = 224 if config['training_date'] == 'earlier' else 214\n",
     "else:\n",
     "\tif config['training_date'] == \"earlier\":\n",
     "\t\tdates = [2018, 2019]\n",
@@ -156,10 +159,10 @@
     "\t\texp_id_base = 210 if config['training_date'] == 'earlier' else 206\n",
     "\n",
     "\telif config['mode'] == 'mcd' or config['mode'] == 'single_run':\n",
-    "\t\tif config['training_date'] == 'current':\n",
-    "\t\t\texp_ids = [108, 109, 110, 111, 112, 113, 114, 115, 116, 117]\n",
-    "\t\telif config['training_date'] == 'earlier':\n",
-    "\t\t\texp_ids = [130, 132, 133, 134, 135, 136, 137, 1125, 1124, 1123]\n",
+    "\t\tif config['training_date'] == 'current': exp = 2\n",
+    "#\t\t\texp_ids = [108, 109, 110, 111, 112, 113, 114, 115, 116, 117]\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 3\n",
+    "#\t\t\texp_ids = [130, 132, 133, 134, 135, 136, 137, 1125, 1124, 1123]\n",
     "\n",
     "ic(dates)\n",
     "\n",
@@ -236,7 +239,7 @@
     }
    ],
    "source": [
-    "exp_ids"
+    "exp"
    ]
   },
   {
@@ -358,6 +361,17 @@
    ],
    "source": [
     "trainer_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repetition_ids = trainer_class(config, dataset, patchesHandler, logger).get_repetition_ids(exp)  \n",
+    "repetition_n = len(repetition_ids)\n",
+    "print(\"repetition_ids {}, repetition_n {}\".format(repetition_ids, repetition_n))\n"
    ]
   },
   {
@@ -2597,7 +2611,7 @@
     "    results = []\n",
     "    error_count = 0\n",
     "\n",
-    "    while idx < len(exp_ids):\n",
+    "    while idx < len(repetition_n):\n",
     "    # for experiment_value, exp_id in zip(experiment_values, exp_ids):\n",
     "        try:\n",
     "\n",
