Refactor run multiple and single experiment, and cloud mask

--- a/run_single_experiment.ipynb
+++ b/run_single_experiment.ipynb
@@ -33,15 +33,11 @@
     "from sklearn import metrics\n",
     "import importlib\n",
     "import utils_v1\n",
-    "import pathlib\n",
-    "import cv2\n",
     "import sys\n",
     "import numpy as np\n",
-    "from src import metrics as _metrics\n",
-    "import src.loss as loss\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    PA, PADistanceMap, PAMultipleDates,\n",
+    "    PAMultipleDates,\n",
     "    MTMultipleDates,\n",
     "    MAMultipleDates\n",
     ")\n",
@@ -49,7 +45,7 @@
     "# from src.dataset_legacy import MTDeforestationTime\n",
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates\n",
-    "from src.trainer.multioutput import TrainerMCDropout\n",
+    "from src.trainer.multioutput import TrainerMCDropout, TrainerSingleRun, TrainerEnsemble\n",
     "from src.Logger import Logger\n"
    ]
   },
@@ -92,18 +88,40 @@
     "\n",
     "config = {\n",
     "\t\"training\": False,\n",
+    "\t\"inferring\": True,\n",
+    "\t\"site\": \"PA\",\n",
+    "\t\"training_date\": \"current\", # values: earlier, current\n",
+    "\t\"mode\": \"mcd\", # values: mcd, single_run, ensemble\n",
     "\t\"save_probabilities\": False,\n",
     "\t\"loadInference\": False,\n",
     "\t\"addPastDeforestationInput\": True,\n",
-    "\t\"training_times\": 1,\n",
-    "\t\"inference_times\": 10,\n",
     "\t\"removePolygons\": True,\n",
     "\t\"uncertainty_method\": \"pred_entropy\", # pred_var MI pred_entropy KL pred_entropy_single\n",
     "\t\"classes_mode\": False,\n",
     "\t\"learning_rate\": 1e-4,\n",
-    "\t\"site\": \"PA\",\n",
-    "\t\"training_date\": \"current\" # values: earlier, current\n",
+    "\t\"plotLandsat\": False,\n",
+    "\t\"plotPOI\": False\n",
+    "\n",
     "}\n",
+    "\n",
+    "\n",
+    "config['training'] = False\n",
+    "\n",
+    "if config['mode'] == 'mcd':\n",
+    "\ttrainerClass = TrainerMCDropout\n",
+    "\tconfig['inference_times'] = 10\n",
+    "\tconfig['training_times'] = 1\n",
+    "elif config['mode'] == 'single_run':\n",
+    "\ttrainerClass = TrainerSingleRun\n",
+    "\tconfig['inference_times'] = 1\n",
+    "\tconfig['training_times'] = 1\n",
+    "elif config['mode'] == 'ensemble':\n",
+    "\ttrainerClass = TrainerEnsemble\n",
+    "\tconfig['inference_times'] = 10\n",
+    "\tconfig['training_times'] = 10\n",
+    "else:\n",
+    "\traise ValueError('Invalid mode')\n",
+    "\n",
     "print(config)\n",
     "\n",
     "if config['site'] == 'PA':\n",
@@ -124,6 +142,8 @@
     "\tdataset = MTMultipleDates(dates = dates, \n",
     "\t \taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
     "\t\tborderBuffer = 2)\t\n",
+    "else:\n",
+    "\traise ValueError('Invalid site')\n",
     "\n",
     "if issubclass(type(dataset), MultipleDates):\n",
     "\tpatchesHandler = PatchesHandlerMultipleDates(\n",
@@ -131,7 +151,6 @@
     "else:\n",
     "\tpatchesHandler = PatchesHandler()\n",
     "\n",
-    "inference_times = config['inference_times']\n",
     "\n",
     "\n",
     "if config['training'] == False:\n",
@@ -147,15 +166,13 @@
     "\t\tif config['training_date'] == 'current': exp = 2; repetition_id = 8\n",
     "\t\telif config['training_date'] == 'earlier': exp = 3; repetition_id = 6\t\t\n",
     "\n",
-    "\tif type(dataset) == MAMultipleDates:\n",
-    "\t\texp = 146\t\t\n",
     "else:\n",
     "\n",
     "\texp = 10\n",
     "\n",
+    "\t\n",
     "logger = Logger()\n",
-    "trainer = TrainerMCDropout(config, dataset, patchesHandler, logger)\n",
-    "\n",
+    "trainer = trainerClass(config, dataset, patchesHandler, logger)\n",
     "trainer.defineExperiment(exp)\n"
    ]
   },
@@ -771,6 +788,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "71bc74b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config[\"inferring\"] != True:\n",
+    "    sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "id": "ac0e35ef",
    "metadata": {},
@@ -1157,7 +1185,7 @@
     }
    ],
    "source": [
-    "trainer.getMAP()"
+    "# trainer.getMAP()"
    ]
   },
   {
@@ -1598,6 +1626,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3e9f60c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.logger.getStats(trainer.uncertainty_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "id": "c9fdc869",
    "metadata": {},
@@ -1775,6 +1813,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7ec08e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config[\"plotLandsat\"] == True:\n",
+    "    label_tmp_dates = []\n",
+    "    for date in dataset.prodes_dates:\n",
+    "        label_tmp_date = dataset.loadLabelFromDate(date)\n",
+    "        label_tmp_date = label_tmp_date[:trainer.mask_tiles.shape[0], :trainer.mask_tiles.shape[1]]\n",
+    "        label_tmp_dates.append(label_tmp_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16379ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config[\"plotLandsat\"] == True:\n",
+    "    # del trainer.image_stack\n",
+    "    import src.lansdatLoader as ll\n",
+    "    import importlib\n",
+    "    importlib.reload(ll)\n",
+    "    landsatLoader = ll.LandsatLoader(dataset)\n",
+    "    ims = landsatLoader.load()\n",
+    "    for idx in range(len(ims)):\n",
+    "        ims[idx] = ims[idx][:trainer.mask_tiles.shape[0], :trainer.mask_tiles.shape[1],:]\n",
+    "    ims = landsatLoader.darken_past_deforestation(ims, trainer.label_no_buffer)\n",
+    "    ims = landsatLoader.add_deforestation_edges_by_date(ims, label_tmp_dates[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6968429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config[\"plotLandsat\"] == True:\n",
+    "    logger.plotCropSampleLandsat(trainer, ims)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "id": "ca3db635",
    "metadata": {},
@@ -1834,93 +1918,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "17f71275",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndataset.previewLims1 = np.array([200, 700, 10200, 11200])\\ndataset.previewLims2 = np.array([2500, 3500, 6000, 7000])\\n'"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "dataset.previewLims1 = np.array([200, 700, 10200, 11200])\n",
-    "dataset.previewLims2 = np.array([2500, 3500, 6000, 7000])\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "94ae78c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nimport importlib\\nimportlib.reload(_plt)\\nplotCropSampleFlag = True\\nif plotCropSampleFlag == True:\\n        importlib.reload(_metrics)\\n        importlib.reload(_plt)\\n        # import matplotlib\\n        # customCmap = matplotlib.colors.ListedColormap(['black', 'red'])\\n        ic(dataset.previewLims1, dataset.previewLims2)\\n        lims = dataset.previewLims1\\n        ic(np.unique(mask_amazon_ts[lims[0]:lims[1], lims[2]:lims[3]]))\\n        lims = dataset.previewLims2\\n        ic(np.unique(mask_amazon_ts[lims[0]:lims[1], lims[2]:lims[3]], return_counts=True))\\n\\n        _plt.plotCropSample5(image_stack[...,previewBandsT0], image_stack[...,previewBandsT1], mean_prob, \\n                error_mask_to_show_rgb[...,::-1], pred_entropy_to_show, \\n                lims = dataset.previewLims1, \\n                titles = ['Snippet $\\\\mathregular{T_{-1}}$', 'Snippet $\\\\mathregular{T_0}$', 'Predicted Probability', 'Predicted', 'Uncertainty'],\\n                cmaps = [plt.cm.gray, plt.cm.gray, 'jet', plt.cm.gray, 'jet'],\\n                maskBackground = [False, False, True, False, True],\\n                invertMask = [False, False, False, False, False], uncertainty_vlims = uncertainty_vlims)\\n        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'PredictSampleUncertainty1_.png', dpi=150, bbox_inches='tight')\\n\\n        _plt.plotCropSample5(image_stack[...,previewBandsT0], image_stack[...,previewBandsT1], mean_prob, \\n                error_mask_to_show_rgb[...,::-1], pred_entropy_to_show, \\n                lims = dataset.previewLims2, \\n                titles = ['Snippet $\\\\mathregular{T_{-1}}$', 'Snippet $\\\\mathregular{T_0}$', 'Predicted Probability', 'Predicted', 'Uncertainty'],\\n                cmaps = [plt.cm.gray, plt.cm.gray, 'jet', plt.cm.gray, 'jet'],\\n                maskBackground = [False, False, True, False, True],\\n                invertMask = [False, False, False, False, False], uncertainty_vlims = uncertainty_vlims)\\n        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'PredictSampleUncertainty2_.png', dpi=150, bbox_inches='tight')\\n\\n        _plt.plotCropSample5(image_stack[...,previewBandsT0], image_stack[...,previewBandsT1], mean_prob, \\n                error_mask_to_show_rgb[...,::-1], pred_entropy_to_show, \\n                lims = dataset.previewLims2, \\n                titles = ['Snippet $\\\\mathregular{T_{-1}}$', 'Snippet $\\\\mathregular{T_0}$', 'Predicted Probability', 'Predicted', 'Uncertainty'],\\n                cmaps = [plt.cm.gray, plt.cm.gray, 'jet', plt.cm.gray, 'jet'],\\n                maskBackground = [False, False, True, False, True],\\n                invertMask = [False, False, False, False, False], uncertainty_vlims = uncertainty_vlims,\\n                colorbar = True)\\n        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'PredictSampleUncertaintyColorbar_.png', dpi=150, bbox_inches='tight')\\n\""
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "import importlib\n",
-    "importlib.reload(_plt)\n",
-    "plotCropSampleFlag = True\n",
-    "if plotCropSampleFlag == True:\n",
-    "        importlib.reload(_metrics)\n",
-    "        importlib.reload(_plt)\n",
-    "        # import matplotlib\n",
-    "        # customCmap = matplotlib.colors.ListedColormap(['black', 'red'])\n",
-    "        ic(dataset.previewLims1, dataset.previewLims2)\n",
-    "        lims = dataset.previewLims1\n",
-    "        ic(np.unique(mask_amazon_ts[lims[0]:lims[1], lims[2]:lims[3]]))\n",
-    "        lims = dataset.previewLims2\n",
-    "        ic(np.unique(mask_amazon_ts[lims[0]:lims[1], lims[2]:lims[3]], return_counts=True))\n",
-    "\n",
-    "        _plt.plotCropSample5(image_stack[...,previewBandsT0], image_stack[...,previewBandsT1], mean_prob, \n",
-    "                error_mask_to_show_rgb[...,::-1], pred_entropy_to_show, \n",
-    "                lims = dataset.previewLims1, \n",
-    "                titles = ['Snippet $\\mathregular{T_{-1}}$', 'Snippet $\\mathregular{T_0}$', 'Predicted Probability', 'Predicted', 'Uncertainty'],\n",
-    "                cmaps = [plt.cm.gray, plt.cm.gray, 'jet', plt.cm.gray, 'jet'],\n",
-    "                maskBackground = [False, False, True, False, True],\n",
-    "                invertMask = [False, False, False, False, False], uncertainty_vlims = uncertainty_vlims)\n",
-    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'PredictSampleUncertainty1_.png', dpi=150, bbox_inches='tight')\n",
-    "\n",
-    "        _plt.plotCropSample5(image_stack[...,previewBandsT0], image_stack[...,previewBandsT1], mean_prob, \n",
-    "                error_mask_to_show_rgb[...,::-1], pred_entropy_to_show, \n",
-    "                lims = dataset.previewLims2, \n",
-    "                titles = ['Snippet $\\mathregular{T_{-1}}$', 'Snippet $\\mathregular{T_0}$', 'Predicted Probability', 'Predicted', 'Uncertainty'],\n",
-    "                cmaps = [plt.cm.gray, plt.cm.gray, 'jet', plt.cm.gray, 'jet'],\n",
-    "                maskBackground = [False, False, True, False, True],\n",
-    "                invertMask = [False, False, False, False, False], uncertainty_vlims = uncertainty_vlims)\n",
-    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'PredictSampleUncertainty2_.png', dpi=150, bbox_inches='tight')\n",
-    "\n",
-    "        _plt.plotCropSample5(image_stack[...,previewBandsT0], image_stack[...,previewBandsT1], mean_prob, \n",
-    "                error_mask_to_show_rgb[...,::-1], pred_entropy_to_show, \n",
-    "                lims = dataset.previewLims2, \n",
-    "                titles = ['Snippet $\\mathregular{T_{-1}}$', 'Snippet $\\mathregular{T_0}$', 'Predicted Probability', 'Predicted', 'Uncertainty'],\n",
-    "                cmaps = [plt.cm.gray, plt.cm.gray, 'jet', plt.cm.gray, 'jet'],\n",
-    "                maskBackground = [False, False, True, False, True],\n",
-    "                invertMask = [False, False, False, False, False], uncertainty_vlims = uncertainty_vlims,\n",
-    "                colorbar = True)\n",
-    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'PredictSampleUncertaintyColorbar_.png', dpi=150, bbox_inches='tight')\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 90,
    "id": "709550a9",
    "metadata": {},
@@ -1963,6 +1960,85 @@
     "\n",
     "print(trainer.ece_score)  \n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4c8c36b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config[\"plotPOI\"] == True:\n",
+    "\n",
+    "    print(trainer.mean_prob.shape)\n",
+    "    font = {'family': \"Times New Roman\",\n",
+    "            'color':  'white',\n",
+    "            'weight': 'bold',\n",
+    "            'size': 24,\n",
+    "            }\n",
+    "\n",
+    "    lims = dataset.previewLims1\n",
+    "    im = trainer.uncertainty_map[lims[0]:lims[1], lims[2]:lims[3]]\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    plt.imshow(im, cmap='jet')\n",
+    "\n",
+    "    letters = ['A', 'B', 'C', 'D', 'E', 'F']\n",
+    "\n",
+    "    for poi_id in range(4):\n",
+    "            \n",
+    "            plt.text(trainer.dataset.snippet_coords['snippet_id0'][poi_id][1], \n",
+    "                    trainer.dataset.snippet_coords['snippet_id0'][poi_id][0], \n",
+    "                    letters[poi_id], fontdict=font)\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    plt.savefig(os.path.join('output/pdf_plot_results', \n",
+    "                            'pdf_plot_poi0.png'), \n",
+    "    dpi=150, bbox_inches='tight')\n",
+    "\n",
+    "    lims = dataset.previewLims2\n",
+    "    im = trainer.uncertainty_map[lims[0]:lims[1], lims[2]:lims[3]]\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    plt.imshow(im, cmap='jet')\n",
+    "\n",
+    "    letters = ['E', 'F']\n",
+    "\n",
+    "    print(trainer.dataset.snippet_coords['snippet_id1'])\n",
+    "    for poi_id in range(2):\n",
+    "            \n",
+    "            plt.text(trainer.dataset.snippet_coords['snippet_id1'][poi_id][1], \n",
+    "                    trainer.dataset.snippet_coords['snippet_id1'][poi_id][0], \n",
+    "                    letters[poi_id], fontdict=font)\n",
+    "    plt.axis('off')\n",
+    "            \n",
+    "    plt.savefig(os.path.join('output/pdf_plot_results', \n",
+    "                            'pdf_plot_poi1.png'), \n",
+    "    dpi=150, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ddc3b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config[\"plotPOI\"] == True:\n",
+    "    trainer.getPOIValues()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "165d0ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "if config[\"plotPOI\"] == True:\n",
+    "    import pickle\n",
+    "    with open('output/log/log_ensemble_.pkl', 'wb') as f:\n",
+    "                pickle.dump(trainer.snippet_poi_results, f)\n"
    ]
   },
   {
